- Adds ParseableFormatStyle post - Increases max-width of site for less code example wrapping - Fixed a spelling mistake on the iOS 16 FormatStyle slug - Changed the link to my book on the about screen

--- a/_sass/4-layouts/post.scss
+++ b/_sass/4-layouts/post.scss
@@ -1,7 +1,7 @@
 /* Post + Page */
 .post,
 .page {
-  max-width: 780px;
+  max-width: 1000px;
   margin: 0 auto;
   color: var(--text-color);
 
